update the docker-compose file

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,12 +3,10 @@ version: "3"
 services:
   frontend:
     build:
-      context: ./frontend/Dockerfile
+      context: ./frontend
       target: DEV
     ports:
       - "3000:3000"
-    environment:
-      - NODE_ENV: development
     networks:
       - sample_monorepo
     command: yarn dev
@@ -16,12 +14,10 @@ services:
       - .:/src
   backend:
     build:
-      context: ./backend/Dockerfile
+      context: ./backend
       target: DEV
     ports:
       - "8080:8080"
-    environment:
-      - NODE_ENV: development
     networks:
       - sample_monorepo
     command: yarn dev
