--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,13 @@
     "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "tsx": "^3.12.6"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.2",
     "typescript": "^5.0.4"
