read env variables from docker compose

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,7 @@ FROM node:18-alpine as DEV
 WORKDIR /src
 
 ENV NODE_ENV=development
+ARG NEXT_PUBLIC_BACKEND_URL
 
 COPY package.json ./
 COPY yarn.lock ./
