--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -9,6 +9,7 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=development
+      - NEXT_PUBLIC_BACKEND_URL=http://localhost:8080
     command: >
       sh -c "cd frontend && yarn dev"
     networks:
@@ -26,6 +27,7 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=8080
+      - WHITELISTED_ORIGIN:http://localhost:3000
     networks:
       - sample_monorepo
     volumes:
