--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "backend",
+  "name": "@baijanaththaru/backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "g": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -18,6 +20,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.2",
+    "prisma": "^4.13.0",
     "typescript": "^5.0.4"
   }
 }
