create container for db

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,8 +7,12 @@ ENV NODE_ENV=development
 
 COPY package.json ./package.json
 COPY yarn.lock ./yarn.lock
+COPY prisma prisma
 
 RUN yarn install
+
+# Generate prisma client
+RUN yarn g
 
 COPY . .
 
