--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,26 +8,40 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=development
-      - NEXT_PUBLIC_BACKEND_URL=http://localhost:8080
+      - NODE_ENV:development
+      - NEXT_PUBLIC_BACKEND_URL:http://localhost:8080
     command: >
       sh -c "cd frontend && yarn dev"
     networks:
       - sample_monorepo
     volumes:
       - .:/src
+  db:
+    image: postgres:13
+    restart: on-failure
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_USER:root
+      - POSTGRES_PASSWORD:admin
+      - POSTGRES_DB:sample_monorepo
+    volumes:
+      - ./db:/var/www/html
   backend:
     build:
       context: ./backend
       target: DEV
+    depends_on:
+      - db
     ports:
       - "8080:8080"
     command: >
       sh -c "cd backend && yarn dev"
     environment:
-      - NODE_ENV=development
-      - PORT=8080
+      - NODE_ENV:development
+      - PORT:8080
       - WHITELISTED_ORIGIN:http://localhost:3000
+      - DATABASE_URL:postgresql://root:admin@db/sample_monorepo
     networks:
       - sample_monorepo
     volumes:
